--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
     <head>
         <link rel="stylesheet" href="css/main.css" />
-        <link href="css/bootstrap-theme.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/bootstrap.css" />    
+        <link rel="stylesheet" href="css/bootstrap/bootstrap.css" />    
     </head>
 
     <body>
@@ -21,17 +20,19 @@
             <div class="col-md-2">
                 <div id="deck" class="cardPlaceholder" onclick="reveal(event)"></div>
             </div>
-            <div id=deckShown class="col-md-2"></div>
-            <div class="col-md-6">
-                <div id="hearts" class="cardPlaceholder suits"></div>
-                <div id="diamonds" class="cardPlaceholder suits"></div>
-                <div id="clubs" class="cardPlaceholder suits"> </div>
-                <div id="spades" class="cardPlaceholder suits"> </div>
+            <div class="col-md-2">
+                <div id="deckShown" class="cardPlaceholder"></div>
+            </div>
+            <div class="col-md-8">
+                <div id="hearts_stack" class="cardPlaceholder suits"></div>
+                <div id="diamonds_stack" class="cardPlaceholder suits"></div>
+                <div id="clubs_stack" class="cardPlaceholder suits"> </div>
+                <div id="spades_stack" class="cardPlaceholder suits"> </div>
             </div>
         </div>
-        <div class="row m-5">
-            <div id="stack1" class="cardPlaceholder"  > </div>
-            <div id="stack2" class="cardPlaceholder"  ></div>
+        <div class="row m-2">
+            <div id="stack1" class="cardPlaceholder" > </div>
+            <div id="stack2" class="cardPlaceholder" ></div>
             <div id="stack3" class="cardPlaceholder" > </div>
             <div id="stack4" class="cardPlaceholder" > </div>
             <div id="stack5" class="cardPlaceholder" > </div>
